--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the dividend payout ratio<br> 
+    What is the dividend payout ratio?<br>
+    The dividend payout ratio is the part of a company's net income that is payed as dividends for common and preffered shareholdrs. Usually the higher dividend payout ratio attracts more investors to the stock and it is often expressed as a percentage.<br>
+    How to calculate dividend payout ratio?<br>
+    To calculate dividend payout ratio you should use the following formula:<br>
+    dividend payout ratio = (dividend per share / earnings per share) * 100<br>
+    Example: Company x issued $3,100,000 in dividneds in the current year with $14,500,000 in net income, calculate the payout ratio:<br>
+    Using the dividend payout ratio the answer will be:<br>
+    dividend payout ratio = (dividend per share / earnings per share) * 100<br>
+    dividend payout ratio = ($3,100,000 / $14,500,000) * 100<br>
+    dividend payout ratio = 21.38%<br>
+    Why use dividend payout ratio?<br>
+    Investors use the dividend payout ratio because it helps them to indicate how much money a company is returning to shareholders against how much it is keeping to reinvest in growth, pay debt or add to cash reserves.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
